--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 		"test": "ava",
 		"dev": "next dev",
 		"build": "next build",
-		"start": "next"
+		"start": "next",
+		"lint": "next lint"
 	},
 	"ava": {
 		"nodeArguments": [
@@ -52,6 +53,11 @@
 	"devDependencies": {
 		"@types/node": "^17.0.17",
 		"@types/react": "^17.0.39",
+		"@typescript-eslint/eslint-plugin": "^5.29.0",
+		"@typescript-eslint/parser": "^5.29.0",
+		"eslint": "^8.18.0",
+		"eslint-config-next": "12.1.6",
+		"eslint-plugin-react": "^7.30.1",
 		"typescript": "^4.5.5"
 	}
 }
