--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"algolia": "0.0.0",
 		"algoliasearch": "^4.12.1",
 		"ava": "^4.1.0",
+		"cloudinary": "^1.30.0",
 		"cors": "^2.8.5",
 		"date-fns": "^2.28.0",
 		"esbuild-node-loader": "^0.8.0",
